# first-flask-app

./: .flake8  .gitignore  README.rst  noxfile.py  pyproject.toml  wsgi.py
src/first_flask_app/: __init__.py  main.py
src/first_flask_app/static/: style.css
src/first_flask_app/templates/: base.html
tests/: conftest.py  test_exists.py  test_qr.py
