[tool.poetry]
name = "first-flask-app"
version = "0.1.0"
description = ""
authors = ["Linus Törngren <linus@etnolit.se>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
python-dotenv = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = {extras = ["toml"], version = "^5.2.1"}
pytest-cov = "^2.10.1"
flake8-import-order = "^0.18.1"
flake8 = "^3.8.3"
pytest-flask = "^1.0.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["first_flask_app"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

